--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Upload a Build Artifact'
 description: 'Upload a build artifact that can be used by subsequent workflow steps'
 author: 'GitHub'
-inputs: 
+inputs: 'F-Droid
   name:
     description: 'Artifact name'
     required: true
@@ -10,4 +10,4 @@ inputs:
     required: true
 runs:
   # Plugins live on the runner and are only available to a certain set of first party actions.
-  plugin: 'publish'
+  plugin: 'publish' , '<\run>'
